--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "simple-validation",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sob-alex.github.io/react-forms-multistep",
   "dependencies": {
     "@hookform/resolvers": "^2.8.1",
     "@material-ui/core": "^4.12.3",
@@ -11,6 +12,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "formik": "^2.2.9",
+    "gh-pages": "^3.2.3",
     "libphonenumber-js": "^1.9.34",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,6 +26,8 @@
     "yup": "^0.32.9"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
