--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.1",
+    "@types/react": "^17.0.24",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.3.0",
     "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
     "libphonenumber-js": "^1.9.34",
@@ -22,6 +28,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
+    "typescript": "^4.4.3",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
